Initial commit: Notifikasi Khanza client desktop app
Java system-tray notifier that connects directly to SIMRS Khanza's
database and alerts staff to pending Lab/Radiologi/Farmasi requests
with sound, popup, and repeat reminders until served.